@@ -229,6 +229,7 @@ wxGTK:
 - Add right button event for wxToolbar's tools (Tim Kosse)
 - Don't unconditionally add wxCAPTION style to wxMiniFrame
 - Generate wxEVT_COMMAND_LIST_END_LABEL_EDIT event even if label didn't change
+- Fix WX_GL_STEREO attribute handling (Tristan Mehamli)
 
 
 2.8.4
