@@ -171,6 +171,7 @@ wxGTK:
 - Generate wxEVT_COMMAND_LIST_END_LABEL_EDIT event even if label didn't change.
 - Replaced g_free with g_border_free to fix crash with newer GTK+.
 - Fixed crash in settings when using tooltips->tip_window with GTK+ 2.11.6.
+- Fix WX_GL_STEREO attribute handling (Tristan Mehamli)
 
 wxMac:
 
